--- a/index.html
+++ b/index.html
@@ -13,10 +13,33 @@
 </head>
 <body>
     <nav>
-        <div></div>
+        <div id= "jezik">
+            Ћирилица
+        </div>
         <div>
-            <a href="https://github.com/anonymousvegan"><img src="git.svg" alt="Github Logo"></a>
+            <a id="logo" href="https://github.com/anonymousvegan"><img src="git.svg" alt="Github Logo"></a>
         </div>
     </nav>
+
+    <div class="container">
+        <p class="text-primary">
+            <b>DA LI SI</b>
+        </p>
+        <p>
+            BUZDOVAN
+        </p>
+        <p>
+            ILI
+        </p>
+        <p>
+            VITEZ
+        </p>
+
+        <p>
+            <i>
+                By anonymousvegan ft. mp050303
+            </i>
+        </p>
+    </div>
 </body>
 </html>
