--- a/test.html
+++ b/test.html
@@ -6,41 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buzdovan ili vitez</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-pitanja.css">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
 </head>
 <body>
-    <nav>
-        <div id= "jezik">
-            Ћирилица
+    <div id="slika">
+        <div id="tekst-iznad-slike">
+            PITANJE
         </div>
-        <div>
-            <a id="logo" href="https://github.com/anonymousvegan"><img src="git.svg" alt="Github Logo"></a>
-        </div>
+        <img  id="slika-pitanja"/>
+        <div id="linija"></div>
+        <div id="broj-pitanja"><span id="trentuno"></span>/<span id="ukupno"></span></div>
     </nav>
 
     <div class="container">
-        <p class="text-primary">
-            <b>DA LI SI</b>
-        </p>
-        <p>
-            BUZDOVAN
-        </p>
-        <p>
-            ILI
-        </p>
-        <p>
-            VITEZ
-        </p>
-        <p>
-            <i>
-                By anonymousvegan ft. mp050303
-            </i>
-        </p>
-        <a href="test.html">
-        <button class="btn btn-primary">TESTIRAJ SE</button></a>
+        <button class="btn btn-primary"></button>
+        <button class="btn btn-primary"></button>
+        <button class="btn btn-primary"></button>
     </div>
 </body>
 </html>
