--- a/test.html
+++ b/test.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style-pitanja.css">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script src="pitanja.js" defer></script>
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -21,7 +22,7 @@
             <img src="1.png" id="slika-pitanja"/>
             <div id="linija" class="bg-primary"></div>
         </div>
-        <div id="broj-pitanja"><span id="trentuno">16</span><span id="kosa">/</span><span id="ukupno">15</span></div>
+        <div id="broj-pitanja"><span id="trenutno"></span><span id="kosa">/</span><span id="ukupno"></span></div>
     </div>
 
     <div class="container">
