--- a/test.html
+++ b/test.html
@@ -18,7 +18,7 @@
             PITANJE
         </div>
         <div id="pitanje">
-            <p id="tekst">Da li pijete?</p>
+            <p id="tekst"></p>
             <img src="1.png" id="slika-pitanja"/>
             <div id="linija" class="bg-primary"></div>
         </div>
