--- a/test.html
+++ b/test.html
@@ -13,6 +13,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div id="kraj"></div>
     <audio id="audio"></audio>
     <div id="slika-kontejner">
         <div id="tekst-iznad-slike">
