it is finished!!!

--- a/test.html
+++ b/test.html
@@ -13,7 +13,15 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div id="kraj"></div>
+    <div id="kraj">
+        <div id="krajnji-tekst">
+        </div>
+        <div id="rezultat">
+        <p>Tvoj  rezultat je: <br>
+            <span id="rezultat-broj">5/10</span>
+        </p>
+        </div>
+    </div>
     <audio id="audio"></audio>
     <div id="slika-kontejner">
         <div id="tekst-iznad-slike">
